--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -16,6 +16,8 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *[[Breton]]: [[pont]] ''m'' -où
+*[[Catalan]]: [[pont]]
+*CJKV Characters: [[橋]]
 *Czech: [[most]]
 *Dutch: [[brug]]
 *Finnish: [[silta]]
@@ -24,18 +26,21 @@
 *German: [[Brücke]] ''f''
 *Indonesian: [[jembatan]]
 *Italian: [[ponte]] ''m''
+*Japanese: [[橋]] ([[はし]], hashi)
+*Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Japanese: [[橋]] ([[はし]], hashi)
-*[[Old English]]: [[brycg]] ''f''
-*Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
 *[[Kurdish]] (Kurmancî): [[pir]]
 *[[Kurdish]] (Soranî): [[pird]]
+*Latin: [[pons]]
 *Latvian: [[tilts]] ''m''
+*[[Occitan]]: [[pònt]]
+*[[Old English]]: [[brycg]] ''f''
 *Polish: [[most]] ''m''
 *Portuguese: [[ponte]] ''f''
+*Romanian: [[punte]]
 *Spanish: [[puente]] ''f''
 *Swedish: [[bro#Swedish|bro]] ''c''
 *Turkish: [[köprü]]
@@ -51,11 +56,11 @@
 *Dutch: bridge
 *French: bridge ''m''
 *Italian: bridge ''m''
-*Latvian: [[bridžs]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Latvian: [[bridžs]] ''m''
 *Polish: [[brydż]] ''m''
 *Swedish: bridge
 *Turkish: [[briç]]
