--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -41,6 +41,7 @@
 *Polish: [[most]] ''m''
 *Portuguese: [[ponte]] ''f''
 *Romanian: [[punte]]
+*Slovak: [[most]] ''m''
 *Spanish: [[puente]] ''f''
 *Swedish: [[bro#Swedish|bro]] ''c''
 *Turkish: [[köprü]]
