--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -24,7 +24,7 @@
 *French: [[pont]] ''m''
 *[[Frisian]]: [[brêge]]
 *German: [[Brücke]] ''f''
-* {{io}} : [[ponto]], [[ferdeko]] (a boat)
+* {{io}} : [[ponto]]
 *Indonesian: [[jembatan]]
 *Italian: [[ponte]] ''m''
 *Japanese: [[橋]] ([[はし]], hashi)
