--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -8,6 +8,7 @@
 :''la semaine des quatre jeudis'' : never
 [[Category:French days of the week]]
 
+[[de:jeudi]]
 [[fr:jeudi]]
 [[it:jeudi]]
 [[nl:jeudi]]
