--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -35,6 +35,7 @@
 *[[{{nl}}]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
 *[[{{fr}}]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
 *German: [[gerade]] (1), [[hetero]] (8)
+*Hungarian: [[heteró]] (1,3), [[heteró]] (8)
 *Irish: [[díreach]] (1), (8)
 *Italian: [[dritto]], [[liscio]], [[subito]], [[eterosessuale]] (8)
 *[[{{pt}}]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
