--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -6,7 +6,7 @@
 
 '''spelt'''
 
-# past tense of to [[spell]]
+# past tense of to [[spell]], deprecated. use "spelled"
 
 === Translations ===
 *[[Dutch]]: [[spelde]], [[spelden]]
@@ -15,7 +15,7 @@
 
 '''spelt'''
 
-# past participle of to spell
+# past participle of to spell, deprecated. use "spelled"
 
 === Translations ===
 *[[Dutch]]: [[gespeld]]
