--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -14,52 +14,52 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Arabic: [[فَرَنْسَا]]
-*[[Bosnian]]: [[Francuska]] ''f''
-*[[Breton]]: [[Frañs]] (State), [[Bro-C'hall]] (country)
-*[[Brithenig]]: [[Ffreinc']]
-*[[Catalan]]: [[França]] ''f''
-*[[Cornish]]: [[Pow Frynk]]
-*Chinese: [[法兰西]] (Fǎlánxī), [[法国]] (Fǎguó)
-*Czech: [[Francie]]
-*Danish: [[Frankrig]]
-*Dutch: [[Frankrijk]] ''n''
-*[[Esperanto]]: [[Francio]], [[Francujo]]
-*Estonian: [[Prantsusmaa]]
-*Finnish: [[Ranska]]
-*French: France ''f''
-*German: [[Frankreich]] ''no gender''
-*Greek: [[Γαλλία]] ''f''
-*Hebrew: [[צרפת|צָרְפַת]] (Tzarfat; classical Ṣārəphath)
-*Hungarian: [[Franciaország]]
-*Indonesian: [[Perancis]]
-*[[Interlingua]]: [[Francia]]
-*Irish: [[an Fhrainc]] ''f''
-*Italian: [[Francia]] ''f''
+*'''Arabic''': [[فَرَنْسَا]]
+*'''Bosnian''': [[Francuska]] ''f''
+*'''Breton''': [[Frañs]] (State), [[Bro-C'hall]] (country)
+*'''Brithenig''': [[Ffreinc']]
+*'''Catalan''': [[França]] ''f''
+*'''Cornish''': [[Pow Frynk]]
+*'''Chinese''': [[法兰西]] (Fǎlánxī), [[法国]] (Fǎguó)
+*'''Czech''': [[Francie]]
+*'''Danish''': [[Frankrig]]
+*'''Dutch''': [[Frankrijk]] ''n''
+*'''Esperanto''': [[Francio]], [[Francujo]]
+*'''Estonian''': [[Prantsusmaa]]
+*'''Finnish''': [[Ranska]]
+*'''French''': France ''f''
+*'''German''': [[Frankreich]] ''no gender''
+*'''Greek''': [[Γαλλία]] ''f''
+*'''Hebrew''': [[צרפת|צָרְפַת]] (Tzarfat; classical Ṣārəphath)
+*'''Hungarian''': [[Franciaország]]
+*'''Indonesian''': [[Perancis]]
+*'''Interlingua''': [[Francia]]
+*'''Irish''': [[an Fhrainc]] ''f''
+*'''Italian''': [[Francia]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Japanese: [[フランス]], [[仏蘭西]] (furansu)
-*Korean: [[프랑스]] (peurangseu)
-*[[Latenkwa]]: [[Larantoa]]
-*Latin: [[Gallia]]
-*Latvian: [[Francija]] ''f''
-*Lithuanian: [[Prancūzija]]
-*Malay: [[Perancis]]
-*[[Maldivian]]: [[Faranseysi Vilath]]
-*Norwegian: [[Frankrike]]
-*Polish: [[Francja]]
-*Portuguese: [[França]]
-*Romanian: [[Fran&#355;a]] ''f''
-*[[Romanica]]: [[Francia]] ''f''
-*Russian: [[Франция]]
-*Slovene: [[Francija]] ''f''
-*Spanish: [[Francia]] ''f''
-*Swedish: [[Frankrike]]
-*Turkish: [[Fransa]]
-*Vietnamese: [[Pháp]]
-*Welsh: [[Ffrainc]] ''f''
+*'''Japanese''': [[フランス]], [[仏蘭西]] (furansu)
+*'''Korean''': [[프랑스]] (peurangseu)
+*'''Latenkwa''': [[Larantoa]]
+*'''Latin''': [[Gallia]]
+*'''Latvian''': [[Francija]] ''f''
+*'''Lithuanian''': [[Prancūzija]]
+*'''Malay''': [[Perancis]]
+*'''Maldivian''': [[Faranseysi Vilath]]
+*'''Norwegian''': [[Frankrike]]
+*'''Polish''': [[Francja]]
+*'''Portuguese''': [[França]]
+*'''Romanian''': [[Fran&#355;a]] ''f''
+*'''Romanica''': [[Francia]] ''f''
+*'''Russian''': [[Франция]]
+*'''Slovene''': [[Francija]] ''f''
+*'''Spanish''': [[Francia]] ''f''
+*'''Swedish''': [[Frankrike]]
+*'''Turkish''': [[Fransa]]
+*'''Vietnamese''': [[Pháp]]
+*'''Welsh''': [[Ffrainc]] ''f''
 |}
 |}
 
