--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -16,6 +16,7 @@
 *German: [[Filiale]] ''f'' (3)
 *{{io}}: brancho, fako (of a science)
 *[[Indonesian]]: [[cabang]]
+*[[Italian]]: [[ramo]] ''m'', [[filiale]] ''f''
 *[[Japanese]]: [[枝]] ([[えだ]], eda) (of tree), [[支店]] ([[してん]], shiten) (of company)
 *[[Slovene]]: [[veja]] ''f'' (1,2)
 *Swedish: [[bransch]] (3)
