--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -25,6 +25,7 @@
 *[[Italian]]: long form: Stati Uniti d'America, short form: Stati Uniti
 *Japanese: [[米国]] (べいこく, beikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, amerika gasshūkoku)
 *Korean: [[미국]] South: [美國] North: [米國] (mi-gwuk)
+*Latin: [[Respublicae Unitae Americae]]
 *{{ms}}: [[Amerika Syarikat]]
 *Polish: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
 *Romanian: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
