--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''[[United]] [[State]]s of [[America]]'''
 
-# Country in North America. Located between Canada and Mexico.
+# Country in North America. Located between [[Canada]] and [[Mexico]].
 
 ====Abbreviation====
 *[[USA]]
