--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -43,6 +43,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 === Translations ===
 *[[Arabic]]: [[جميل]]
 *[[Breton]]: [[brav]], [[kaer]]
+*Chinese: [[美]] (měi)
 *Dutch: [[mooi]]
 *[[Esperanto]]: [[bela]]
 *{{fi}}: [[kaunis]]
