+hu /* Translations */ <tortoise#241186>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -21,7 +21,7 @@
 *French: [[tortue]] ''f''
 *Frisian: [[skyldpod]]
 *German: [[Schildkröte]] ''f''
-*Hungarian: [[teknősbéka]]
+*Hungarian: [[teknősbéka]], [[teknős]]
 *Indonesian: [[kura-kura]]
 *Italian: [[tartaruga]] ''f''
 |}
