--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -1,6 +1,8 @@
-=== Pronunciation ===
-*[[w:IPA|IPA]]: /tʃuːz/
-*[[w:SAMPA|SAMPA]]: /tSu:z/
+==English==
+===Pronunciation===
+*cho͞oz, /tʃuːz/, /<tt>tSu:z</tt>/
+*:'''Homophones''': [[chews]]
+*:[[Rhymes:English:-uːz|Rhymes: -uːz]]
 
 === Verb ===
 '''to choose''' ([[chose]], [[chosen]])
@@ -14,7 +16,7 @@
 
 ==== Translations ====
 *Dutch: [[kiezen]]
-*Esperanto: [[elekti]]
+*[[Esperanto]]: [[elekti]]
 *Finnish: [[valita]]
 *Indonesian: [[pilih]], [[pilah]], [[pilih|memilih]]
 *Japanese: [[選ぶ]] ([[えらぶ]], erabu)
