--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -237,7 +237,8 @@ The translations below need to be checked by native speakers and inserted into t
 |}
 |}
 
-'''banking: total amount of checks/cheques or other drafts written against a bank {| border=0  width=100%
+'''banking: total amount of checks/cheques or other drafts written against a bank'''
+{| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
