+English, +{infl} <count#221465>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -1,12 +1,12 @@
-== Noun ==
+==English==
 
-'''count'''
-
-#The male ruler of a [[county]].  Also known as an [[earl]], especially in England.
+===Noun===
+'''count'''  (''plural:'' '''[[counts]]''')
+# The male ruler of a [[county]].  Also known as an [[earl]], especially in England.
 #*The female equivalent is [[countess]].
-#The result of a tally that reveals the number of items in a set.
-#A [[countdown]].
-#A [[charge]] of misconduct brought in a [[legal]] proceding.
+# The result of a tally that reveals the number of items in a set.
+# A [[countdown]].
+# A [[charge]] of misconduct brought in a [[legal]] proceding.
 
 === Translations ===
 *[[Breton]]: [[kont]] ''m'' -ed ''pl'' (1), [[kont]] ''f'' -où ''pl'' (2)
@@ -22,15 +22,14 @@
 *[[Slovene]]: [[grof]] ''m'' (1), [[rezultat]] ''m'' (2), [[odštevanje]] ''n'' (3)
 *[[Spanish]]: [[conde]] ''m'' (1)
 
-== Verb ==
+===Verb===
+{{en-infl-reg-consonant|count||}}
 
-'''to count'''
+[[Intransitive]]:
+# To [[enumerate]] the digits of one's [[numeral]] system.
 
-==== Intransitive ====
-#To [[enumerate]] the digits of one's [[numeral]] system.
-
-==== Transitive ====
-#To determine the [[number]] (of objects in a group.)
+[[Transitive]]:
+# To determine the [[number]] (of objects in a group.)
 
 === Translations ===
 *[[Breton]]: [[kontañ]]
