--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -172,4 +172,5 @@ The translations below need to be checked by native speakers and inserted into t
 
 [[Category:Check_translations]]
 
+[[hu:plum]]
 [[pl:Plum]]
