--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -15,8 +15,7 @@
 *[[Bavarian]]: [[Budda]] ''m''
 *[[Breton]]: [[amanenn]] ''m''
 *Bulgarian: [[масло]] ''n''
-*Chinese: [[黄油]] (huángyóu) 
-*Chinese pinyin: [[niuyou]], [[niu2you2]]
+*Chinese: [[黄油]] (huángyóu); [[niu2you2]]
 *Czech: [[máslo]]  ''n''
 *Dutch: [[boter]] ''f''
 *[[Finnish]]: [[voi]]
