/* Translations */ +da; balance columns <bridge#227784>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -20,21 +20,22 @@
 *[[Catalan]]: [[pont#Catalan|pont]]
 *CJKV Characters: [[橋]]
 *Czech: [[most#Czech|most]]
+*Danish: [[bro]] ''c''
 *Dutch: [[brug]]
 *Estonian: [[sild]]
 *Finnish: [[silta]]
 *French: [[pont]] ''m''
 *[[Frisian]]: [[brêge]]
 *German: [[Brücke]] ''f''
-* {{io}} : [[ponto]]
+*{{io}}: [[ponto]]
 *Indonesian: [[jembatan]]
 *Italian: [[ponte#Italian|ponte]] ''m''
 *Japanese: [[橋]] ([[はし]], hashi)
-*Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
 *[[Kurdish]] (Kurmancî): [[pir]]
 *[[Kurdish]] (Soranî): [[pird]]
 *Latin: [[pons]]
@@ -76,7 +77,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: setto nasale ''m''
+*Italian: [[setto]] nasale ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -91,12 +92,11 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *French: bridge ''m''
-*Italian: [[ponte]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+*Italian: [[ponte]] ''m''
 |}
 |}
 '''nautical'''
