--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -52,9 +52,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 유
+* '''[[Hangeul]]''': [[유]]
 
 * '''[[Eumhun]] reading''': 
 
