--- a/en/k/knaoken.3565.wikitext
+++ b/en/k/knaoken.3565.wikitext
@@ -1,6 +1,4 @@
-=== Noun ===
-
-Part of the skeleton of vertebrates. Used only for living creatures. For bones of dead creatures, use [[bunken]].
-
-==== Translations ====
-*[[English]]: [[bone]]
+==Low Saxon==
+===Noun===
+'''Knaoken'''
+# [[bone]]
