sv, headers <bone marrow#248039>

--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -1,12 +1,14 @@
+==English==
 === Noun ===
 '''bone marrow'''
 
 === Translations ===
-*[[Dutch]]: [[beenmerg]] ''n''
+*Dutch: [[beenmerg]] ''n''
 *[[Esperanto]]: [[osta medolo]]
-*[[French]] : [[moelle osseuse]] ''f''
-*[[Indonesian]] : [[sumsum tulang]]
-*[[Japanese]] : [[骨髄]] ([[こつずい]], kotsuzui)
-*[[Latin]]: [[medulla ossium]]
-*[[Polish]]: [[szpik kostny]] ''m''
-*[[Spanish]]: [[meollo]], [[tuétano]], [[médula]]
+*French : [[moelle osseuse]] ''f''
+*Indonesian : [[sumsum tulang]]
+*Japanese : [[骨髄]] ([[こつずい]], kotsuzui)
+*Latin: [[medulla ossium]]
+*Polish: [[szpik kostny]] ''m''
+*Spanish: [[meollo]], [[tuétano]], [[médula]]
+*Swedish: [[benmärg]] ''c''
