--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -27,6 +27,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[kurva]] ''c''
 |}
 |}
 
@@ -42,6 +43,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[kurva]] ''c''
 |}
 |}
 
@@ -56,6 +58,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[kurva]] ''c'' (''usually plural''), [[figur]] ''c'' (''usually singular'')
 |}
 |}
 
@@ -81,6 +84,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[böja]], [[kröka]]
 |}
 |}
 
@@ -95,6 +99,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+
 |}
 |}
 
@@ -117,6 +122,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Swedish: [[böja]] (sig)
 |}
 |}
 
@@ -129,7 +135,7 @@ the tables above.-->
 *Indonesian: [[kurva]]
 *{{ga}}:: [[cuar]]
 *Japanese: [[曲線]] ([[きょくせん]], kyokusen)
-*Swedish: [[kurva]] ''c''
+
 
 [[Category:1000 English basic words]]
 
