--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -12,26 +12,22 @@
 *[[Yugoslav]]
 
 ===Translations===
+*Bosnian: [[Jugoslavija]] ''f''
 *Chinese: [[南斯拉夫]]
 *[[Esperanto]]: [[Jugoslavio]]
-*[[Dutch]]: [[Joegoslavië]]
-*[[Finnish]]: [[Jugoslavia]]
+*Dutch: [[Joegoslavië]]
+*Finnish: [[Jugoslavia]]
 *French: [[Yougoslavie]] ''f''
 *German: [[Jugoslavien]]
 *Italian: [[Jugoslavia]], [[Iugoslavia]] ''f''
 *Japanese: [[ユーゴスラヴィア]]
-*[[Polish]]: [[Jugosławia]]
-*[[Slovene]]: [[Jugoslavija]] ''f''
+*Polish: [[Jugosławia]]
+*Serbian:
+:*cyrillic: [[Југославија]] ''f''
+:*latin: [[Jugoslavija]] ''f''
+*Slovene: [[Jugoslavija]] ''f''
 *Swedish: [[Jugoslavien]]
 
 ''See:'' [[Countries of the world]]
-
-----
-
-==Spanish==
-===Proper noun===
-'''Yugoslavia'''
-
-# Yugoslavia
 
 [[pl:Yugoslavia]]
