--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -1,13 +1,16 @@
-{{rfc}}
-#To violently thrust a [[sharp]], [[pointy]] object into another object or creature.
+==English==
+===Etymology===
+Middle English
+===Transitive Verb===
+# Pierce, wound, with (usually short) pointed tool or [[weapon]] e.g. [[knife]] or [[dagger]]; aim blow with such weapon (''at''); inflict sharp pain on (person, his feelings, conscience, etc.), aim blow ''at'' (reputation, person etc.)
+===Noun===
+# Act of stabbing, blow or thrust with knife etc., wound thus made, blow or pain inflicted on person's feelings; attempt, try
 
 ===[[Abbreviation]]===
 STAB
 #Sociedade dos Técnicos Açucareiros e Alcooleiros do Brasil (Portugues)
 #:'''Translations''' (foreign equivalents)
 #:*[[English]]: [[Society of Sugar and Alcohol Technologists of Brazil]]
-
-----
 
 ==Danish==
 ===Noun===
