--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -7,20 +7,16 @@
 *[[w:SAMPA|SAMPA]]: /spi:k/
 
 ===Verb===
-
-'''to speak''' ([[spoke]], [[spoken]]; ''archaic'': spake, spoke)
-
-(Inflected forms: [[speaking]], speaks)
-
+{{en-infl-irreg|speak|speaks|speaking|spoke|spoke}}; ''archaic'': [[spake]]
 # to [[communicate]] by the use of sounds that are are interpreted as language; to communicate verbally.
 # to make sounds with the vocal chords.
 # to express through writing.
-#:''He spoke of it in his diary''
+#:''He '''spoke''' of it in his diary''
 # to express without words.
-#:''Actions speak louder than words''.
+#:''Actions '''speak''' louder than words''.
 # to deliver a message to a group; to deliver a [[speech]].
 # to have the command of a language.
-#:''He speaks Klingon fluently''.
+#:''He '''speaks''' Klingon fluently''.
 
 ====Synonyms====
 *[[articulate]], [[talk]], [[verbalize]].
