--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{Wikipedia}}
 ===Proper noun===
 '''France'''
 
@@ -37,7 +38,6 @@
 {|
 *'''Japanese''': [[フランス]], [[仏蘭西]] (furansu)
 *'''Korean''': [[프랑스]] (peurangseu)
-*'''Latenkwa''': [[Larantoa]]
 *'''Latin''': [[Gallia]]
 *'''Latvian''': [[Francija]] ''f''
 *'''Lithuanian''': [[Prancūzija]]
@@ -47,7 +47,6 @@
 *'''Polish''': [[Francja]]
 *'''Portuguese''': [[França]]
 *'''Romanian''': [[Fran&#355;a]] ''f''
-*'''Romanica''': [[Francia]] ''f''
 *'''Russian''': [[Франция]]
 *'''Slovene''': [[Francija]] ''f''
 *'''Spanish''': [[Francia]] ''f''
@@ -65,7 +64,6 @@
 
 ===See also===
 *[[Countries of the world]]
-*[[w:France|Wikipedia article on France]]
 
 ----
 
@@ -77,7 +75,7 @@
 
 ===Related terms===
 *[[français]]
-[[Category:English country nouns]]
+[[Category:Countries]]
 [[Category:fr:Countries]]
 
 [[et:France]]
