/* Translations */  +fa <come#341309>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -32,6 +32,7 @@
 *Japanese: [[来る]] (くる, kuru)
 *[[Kurdish]]: [[hatin]]
 *[[Manchu]]: [[jimbi]]
+*Persian: [[آمَدَن]] (āmædæn)
 *Portuguese: [[vir]]
 *Spanish: [[venir]]
 
@@ -45,6 +46,7 @@
 *Japanese: [[来た]] (きた, kita)
 *[[Kurdish]]: [[hatî]]
 *[[Manchu]]: [[jihe]]
+*Persian: [[آمَدِه]] (āmæde)
 *Spanish: [[venido]]
 
 ----
