/* Noun */ +1 def <European#342031>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''European'''
 #Person living in [[Europe]], or sometimes only [[European Union]].
-
+#pertaining to, or derived from, Europe.
 ====Translations====
 
 *[[Catalan]]: [[europeu]] ''m'' [[europea]] ''f''
