--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -1,16 +1,15 @@
 ==English==
 ===Pronunciation===
-*[[w:AHD|AHD]]: n(y)oo͞-zēl'ənd
-*[[w:IPA|IPA]]: /n(j)uːˈziːlənd/
-*[[w:SAMPA|SAMPA]]: /n(j)u:"zi:l@nd/
+*[[RP]]: "nyoo͞-zē'lənd, /ˌnjuːˈziːlənd/, /%nju:"zi:l@nd/
+*(''US''): "n(y)oo͞-zē'lənd, /ˌn(j)uːˈziːlənd/, /%n(j)u:"zi:l@nd/
 
 ===Etymology===
-From Dutch '''"[[Nieuw Zeeland]]"''' meaning '''"new Zeeland"''' after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of '''[[Zeeland]]'''.
+From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
 
 ===Proper noun===
 '''New Zealand'''
 
-# Country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.
+#A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''NZ'''
 
 ====Translations====
 *[[Bosnian]]: Novi Zeland ''m''
@@ -29,7 +28,7 @@ From Dutch '''"[[Nieuw Zeeland]]"''' meaning '''"new Zeeland"''' after the Dutch
 *[[Hungarian]]: [[Új-Zéland]]
 *[[Indonesian]]: [[Selandia Baru]]
 *[[Interlingua]]: [[Nove Zelanda]]
-*Italian: [[Nuova Zelanda]]
+*Italian: [[Nuova Zelanda]] ''f''
 *Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
 *Latin:  [[Nova Zelanda]]
 *[[Maori]]: [[Aotearoa]], [[Niu Tireni]]
@@ -42,16 +41,14 @@ From Dutch '''"[[Nieuw Zeeland]]"''' meaning '''"new Zeeland"''' after the Dutch
 *Swedish: [[Nya Zeeland]]
 *Turkish: [[Yeni Zelanda]]
 
-====Derived words====
+====Derived terms====
 *[[New Zealander]]
 *[[Enzed]]
 *[[Enzedder]]
 
-====Related words====
+===See also===
 *[[Aotearoa]]
 *[[Aotearoa New Zealand]]
-
-===See also===
 *[[Countries of the world]]
 *[[w:New Zealand|Wikipedia article about New Zealand]]
 [[Category:English country nouns]]
