--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -12,7 +12,7 @@
 *[[Breton]]: [[Stadoù-Unanet Amerika]] ''f, pl'', short : [[SUA]]
 *Bulgarian: [[Съединени Американски Щати]], short: [[САЩ]]
 *[[Catalan]]: [[Estats Units d'Amèrica]] ''m''
-*Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó), [[美国]]/[[美國]] (pinyin: Měiguó)
+*Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
 *Dutch: [[Verenigde Staten van Amerika]] ''f, pl'', abbreviation: [[VSA]]
 *[[Esperanto]]: [[Unuiĝintaj Ŝtatoj de Ameriko]]
 *Finnish: [[Amerikan Yhdysvallat]], short: [[Yhdysvallat]], very short: [[USA]]
