robot  Adding: io <beautiful#501238>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -68,6 +68,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 [[Category:1000 English basic words]]
 
 [[es:beautiful]]
+[[io:Beautiful]]
 [[it:beautiful]]
 [[pt:Beautiful]]
 [[ru:Beautiful]]
