--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -43,6 +43,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 === Translations ===
 *[[Arabic]]: [[جميل]]
 *[[Breton]]: [[brav]], [[kaer]]
+*[[Bulgarian]]:[[красив, прекрасен]]
 *Chinese: [[美]] (měi, meili, mei3li4)
 *Dutch: [[mooi]]
 *[[Esperanto]]: [[bela]]
