--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -1,10 +1,11 @@
 ==English==
-
+[[Category:1000 English basic words]]
+[[Category:Card games]]
 ===Noun===
 '''bridge''' (''plural'' '''bridges''')
 
 #A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
-#{{cattag|card games}} A [[card game]] played normally with four players playing as two teams of two players each.
+#(''card games'') A [[card game]] played normally with four players playing as two teams of two players each.
 #The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
 #(''dentistry'') A [[prosthesis]] replacing one or several adjacent [[tooth|teeth]].
 #{{nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from the [[quarterdeck]].
@@ -12,10 +13,7 @@
 ====Translations====
 
 '''construction or natural feature that spans a divide'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *[[Breton]]: [[pont#Breton|pont]] ''m'' -où
 *[[Catalan]]: [[pont#Catalan|pont]]
 *CJKV Characters: [[橋]]
@@ -27,14 +25,11 @@
 *French: [[pont]] ''m''
 *[[Frisian]]: [[brêge]]
 *German: [[Brücke]] ''f''
-*{{io}}: [[ponto]]
+*[[w:Ido|Ido]]: [[ponto]]
 *Indonesian: [[jembatan]]
 *Italian: [[ponte#Italian|ponte]] ''m''
 *Japanese: [[橋]] ([[はし]], hashi)
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 *Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
 *[[Kurdish]] (Kurmancî): [[pir]]
 *[[Kurdish]] (Soranî): [[pird]]
@@ -49,70 +44,38 @@
 *Spanish: [[puente]] ''f''
 *Swedish: [[bro#Swedish|bro]] ''c''
 *Turkish: [[köprü]]
-|}
-|}
+{{bottom}}
 
 '''card game'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Danish: bridge
 *Dutch: bridge
 *French: bridge ''m''
 *Italian: bridge ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 *Latvian: [[bridžs]] ''m''
 *Polish: [[brydż]] ''m''
 *Swedish: bridge
 *Turkish: [[briç]]
-|}
-|}
+{{bottom}}
 
 '''bony ridge of the nose'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Italian: [[setto]] nasale ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-|}
+{{mid}}
+{{bottom}}
 
 '''replacement for teeth'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *French: bridge ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 *Italian: [[ponte]] ''m''
-|}
-|}
+{{bottom}}
+
 '''nautical'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-
-|}
-|}
-
+{{top}}
+{{mid}}
+{{bottom}}
 ===Verb===
 '''to bridge'''
 
@@ -164,4 +127,3 @@
 *[[w:Contract_bridge_(card_game)|Wikipedia article on bridge, the card game]]
 
 [[de:Brücke]]
-[[Category:1000 English basic words]]
