/* Translations */ <et cetera#512770>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -23,6 +23,7 @@ The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es, etc.
 *Finnish: [[jne.]] abbreviation of [[ja niin edelleen]]
 *French: [[et cétéra]]
 *German: [[und cetera]], [[usw.]], [[und so weiter]]
+*Hungarian: [[stb.]] abbreviation of [[satöbbi]], [[(é)s a többi]]
 *Italian: [[eccetera]]
 *Japanese: [[など]] (nado), [[等]] (とう, tou)
 *Latin: [[et cetera]]
