--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -8,9 +8,9 @@
 
 # A hardened block of [[mud]], [[clay]], etc, used for building
 #:''This house is made of '''bricks'''''.
-# {{uncountable}} Bricks as a building material
+#Bricks as a building material
 #:''This house is made of '''brick'''''.
-# {{hoops}} A shot which misses, particularly one which bounces directly out of the basket.
+# {{basketball}} A shot which misses, particularly one which bounces directly out of the basket.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
 
 ====Translations====
