--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -94,5 +94,6 @@
 *[[Wiktionary_Appendix:Colours|Appendix:Colours]]
 
 [[Category:Colors]]
+[[Category:Yellows]]
 [[Category:Spices and Herbs]]
 [[Category:Plants]]
