--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -186,6 +186,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 [[Category:Fruits]]
 [[Category:Plants]]
 
+[[io:Plum]]
 [[it:plum]]
 [[hu:plum]]
 [[pl:Plum]]
