--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -1,8 +1,8 @@
 ==English==
-=== Noun ===
-'''stomach''' ([[stomachs]])
 
-#An [[organ]] in animals that stores food that is in the process of [[digestion]] as it is dissolved.
+=== Noun ===
+'''stomach'''  (''plural:'' '''[[stomachs]]''')
+# An [[organ]] in animals that stores food that is in the process of [[digestion]] as it is dissolved.
 
 ==== Translations ====
 *[[Breton]]: [[stomog]] ''m''
@@ -17,6 +17,10 @@
 *Portuguese: [[estômago]] ''m''
 *Russian: [[желудок]] ''m'' (želúdok)
 *Spanish: [[estómago]] ''m''
+
+===Verb===
+{{en-infl-reg-consonant|stomach||}}
+# To be able to handle something, either emotionally or mentally.
 
 ===See also===
 *[[abdomen]]
