--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -19,3 +19,4 @@
 *French:  [[sucer]] (1), [[être]] [[chiant]] (2), [[être]] [[chiant]] [[en]] (3)
 *Polish: [[ssać]]
 *Norwegian: [[suge]]
+*Italian: [[succhiare]], [[suggere]] (1), [[fare schifo]] (2), [[fare schifo a]] (3)
