--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -40,6 +40,7 @@
 *Polish: [[most#Polish|most]] ''m''
 *Portuguese: [[ponte#Portuguese|ponte]] ''f''
 *Romanian: [[punte]]
+*Russian: [[мост]] ''m''
 *Slovak: [[most#Slovak|most]] ''m''
 *Spanish: [[puente]] ''f''
 *Swedish: [[bro#Swedish|bro]] ''c''
@@ -55,6 +56,7 @@
 {{mid}}
 *Latvian: [[bridžs]] ''m''
 *Polish: [[brydż]] ''m''
+*Russian: [[бридж]] ''m''
 *Swedish: bridge
 *Turkish: [[briç]]
 {{bottom}}
@@ -70,12 +72,15 @@
 *French: bridge ''m''
 {{mid}}
 *Italian: [[ponte]] ''m''
+*Russian: [[мост]] ''m''
 {{bottom}}
 
 '''nautical'''
 {{top}}
 {{mid}}
+*Russian: [[капитанский мостик]] ''m''
 {{bottom}}
+
 ===Verb===
 '''to bridge'''
 
