--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -10,55 +10,54 @@
 # Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
 
 ====Translations====
-*{{ar}}: [[المانيا]] (almāniyā)
+*Arabic: [[المانيا]] (almāniyā)
 *[[Bosnian]]: Njemačka ''f''
-*{{br}}: [[Alamagn]]
-*{{ca}}: [[Alemanya]]
-*{{kw}}: [[Almayn]]
-*{{zh}}: [[德国]] (Déguó), [[德意志]] (Déyìzhì)
-*{{cs}}: [[Německo]] ''n''
-*{{da}}: [[Tyskland]]
-*{{nl}}: [[Duitsland]] ''n''
-*{{eo}}: [[Germanio]], [[Germanujo]]
-*{{et}}: [[Saksamaa]]
-*{{fa}}: [[مملکت المان]]
-*{{fi}}: [[Saksa]]
-*{{fr}}: [[Allemagne]] ''f''
-*{{fy}}: [[Dútslân]] ''n''
-*{{de}}: [[Deutschland]] ''n''
-*{{gmh}}: [[Tiutschlant]] ''n'', [[Tiutschlant]] ''n''
-*{{el}}: [[Γερμανία]] ''f''
-*{{haw}}: [[Kelemānia]]
-*{{he}}: [[גרמניה]] (Germaniyah) ''f''
-*{{hu}}: [[Németország]]
-*{{is}}: [[Þýskaland]] ''n''
-*{{id}}: [[Jerman]]
-*{{ia}}: [[Germania]]
-*{{ga}}: [[an Ghearmáin]] ''f''
-*{{it}}: [[Germania]] ''f''
-*{{ja}}: [[ドイツ]], [[独逸]] (Doitsu)
-*{{km}}: [[ឤលឺម៉ង់]] (āllīmang)
-*{{ko}}: [[독일]] (dogil), [[독일국]] (dok-il-guk)
-*{{la}}: [[Germania]] ''f''
-*{{lv}}: [[Vācija]] ''f''
-*{{lb}}: [[Däitschland]] ''n''
-*{{ms}}: [[Jerman]]
+*Breton: [[Alamagn]]
+*Catalan: [[Alemanya]]
+*Cornish: [[Almayn]]
+*Chinese: [[德国]] (Déguó), [[德意志]] (Déyìzhì)
+*Czech: [[Německo]] ''n''
+*Danish: [[Tyskland]]
+*Dutch: [[Duitsland]] ''n''
+*Esperanto: [[Germanio]], [[Germanujo]]
+*Estonian: [[Saksamaa]]
+*Farsi: [[مملکت المان]]
+*Finnish: [[Saksa]]
+*French: [[Allemagne]] ''f''
+*Frisian: [[Dútslân]] ''n''
+*German: [[Deutschland]] ''n''
+*Middle High German: [[Tiutschlant]] ''n'', [[Tiutschlant]] ''n''
+*Greek: [[Γερμανία]] ''f''
+*Hawaiian: [[Kelemānia]]
+*Hebrew: [[גרמניה]] (Germaniyah) ''f''
+*Hungarian: [[Németország]]
+*Icelandic: [[Þýskaland]] ''n''
+*Indonesian: [[Jerman]]
+*Interlingua: [[Germania]]
+*Irish: [[an Ghearmáin]] ''f''
+*Italian: [[Germania]] ''f''
+*Japanese: [[ドイツ]], [[独逸]] (Doitsu)
+*Khmer: [[ឤលឺម៉ង់]] (āllīmang)
+*Korean: [[독일]] (dogil), [[독일국]] (dok-il-guk)
+*Latin: [[Germania]] ''f''
+*Latvian: [[Vācija]] ''f''
+*Luxembourgish: [[Däitschland]] ''n''
+*Malay: [[Jerman]]
 *[[Maldivian]]: Jarumanu Vilay
-*{{pl}}: [[Niemcy]]
-*{{pt}}: [[Alemanha]] ''f''
-*{{ro}}: [[Germania]] ''f''
-*[[Romanica]]: [[Germania]] ''f''
-*{{ru}}: [[Германия]] (Germaniya) ''f'' 
-*{{sk}}: [[Nemecko]] ''n''
-*{{sl}}: [[Nemčija]] ''f''
-*{{es}}: [[Alemania]] ''f''
-*{{sw}}: [[Ujerumani]] ''6''
-*{{sv}}: [[Tyskland]]
-*{{th}}: [[ชาวเยอรมัน]] (chaw-Yoermen)
-*{{tr}}: [[Almanya]]
-*{{vi}}: [[nước Đức]]
-*{{cy}}: [[yr Almaen]] ''f''
-*{{xh}}: [[iJamani]] ''5''
+*Polish: [[Niemcy]]
+*Portuguese: [[Alemanha]] ''f''
+*Romanian: [[Germania]] ''f''
+*Russian: [[Германия]] (Germaniya) ''f'' 
+*Slovak: [[Nemecko]] ''n''
+*Slovene: [[Nemčija]] ''f''
+*Spanish: [[Alemania]] ''f''
+*Swahili: [[Ujerumani]] ''6''
+*Swedish: [[Tyskland]]
+*Thai: [[ชาวเยอรมัน]] (chaw-Yoermen)
+*Turkish: [[Almanya]]
+*Vietnamese: [[nước Đức]]
+*Welsh: [[yr Almaen]] ''f''
+*Xhosa: [[iJamani]] ''5''
 
 ===See also===
 *[[German Empire]]
@@ -69,9 +68,10 @@
 *[[Third Reich]]
 *[[Prussia]]
 *[[Countries of the world]]
-*[[w:Germany|Wikipedia article on Germany]]
+{{Wikipedia}}
 
-[[Category:English exonyms]]
+[[Category:Countries]]
+[[Category:Exonyms]]
 
 [[hi:Germany]]
 [[io:Germany]]
