--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -32,6 +32,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Russian: [[ползти]]
 |}
 |}
 
@@ -46,6 +47,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Russian: [[стелиться]]
 |}
 |}
 
@@ -60,6 +62,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Russian: [[стелиться]]
 |}
 |}
 
