--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -23,6 +23,7 @@
 *Italian: [[curva]] ''f''
 {{mid}}
 *Swedish: [[kurva]] ''c''
+*Russian: [[изгиб]] ''m''
 {{bottom}}
 
 '''geometry: one-dimensional figure'''
@@ -38,6 +39,7 @@
 {{top}}
 {{mid}}
 *Swedish: [[kurva]] ''c'' (''usually plural''), [[figur]] ''c'' (''usually singular'')
+*Russian: [[изгибы]] pl.
 {{bottom}}
 
 ===Transitive verb===
