--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -39,7 +39,7 @@
 {{top}}
 {{mid}}
 *Swedish: [[kurva]] ''c'' (''usually plural''), [[figur]] ''c'' (''usually singular'')
-*Russian: [[изгибы]] pl.
+*Russian: [[изгибы]] ''pl.''
 {{bottom}}
 
 ===Transitive verb===
