--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -77,6 +77,7 @@
 {{top}}
 {{mid}}
 *Swedish: [[böja]] (sig)
+*Russian: [[изгибаться]], [[гнуться]]
 {{bottom}}
 
 =====Translations to be checked=====
