--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -12,6 +12,7 @@
 *Bavarian: [[Budda]] ''m''
 *Breton: [[amanenn]] ''m''
 *Bulgarian: [[масло]] ''n''
+*Catalan: [[mantega]] ''f''
 *Chinese: [[黄油]] (huángyóu); [[niu2you2]]
 *Czech: [[máslo]]  ''n''
 *Dutch: [[boter]] ''f''
