cleaned up <play#526856>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -1,51 +1,68 @@
 ==English==
 ===Pronunciation===
-*plā, /pleɪ/, /pleI/
+*plā, /pleɪ/, /<tt>pleI</tt>/
 *:[[Rhymes:English:-eɪ|Rhymes: -eɪ]]
 
 ===Intransitive verb===
-'''to play''' ([[plays]], [[played]], [[playing]])
+{{en-infl-reg-consonant|play||}}
 
-#To act in a manner such that one would have [[fun]]; to engage in activities expressly for the purpose of recreation.
-#To use a musical instrument.
+#To act in a manner such that one has [[fun]]; to engage in activities expressly for the purpose of recreation.
+#To produce music using a musical instrument.
 #To deal with a situation in a diplomatic manner.
 #To act in a performance.
 
 ====Translations====
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to I go here-->
-*{{ar}}: [[يلعب]]
-*[[Chinese]]: [[玩]] (wán)
-*{{nl}}: [[spelen]]
-*{{eo}}: [[ludi]]
-*{{fi}}: [[leikkiä]] (1), [[pelata]](1), [[soittaa]] (2), [[näytellä]] (3)
-*{{fr}}: [[jouer]]
-*{{de}}: [[spielen]] (1, 2, 4)
-*{{gn}}: [[ñembosarái]]
-*{{io}}: [[ludar]] (1), [[plear]] (2, 4)
-*{{ia}}: [[jocar]]
-*Irish: [[súgradh]] ([[verbal noun]])
-*{{it}}: [[giocare]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from J to Z go here-->
-*{{ja}}: [[遊ぶ]] (asobu)
-*{{pt}}: [[jogar]]
-*{{ru}}: [[играть]]
-*{{sk}}: [[hrať sa]]
-*{{sl}}: [[igrati se]]
-*{{es}}: [[jugar]]
-*{{sv}}: [[leka]] (1), [[spela]] (1,2,4)
-*[[Tupinambá]]: [[nhemosaraîa]]
-|}
-|}
 
-====Related terms====
+'''act in a manner such that one has fun'''
+{{top}}
+*French: [[jouer]]
+*Italian: [[giocare]]
+{{mid}}
+{{bottom}}
+
+'''produce music using  a musical instrument'''
+<!--Note: this an INTRANSITIVE sense-->
+{{top}}
+{{mid}}
+{{bottom}}
+
+'''deal with a situation in a diplomatic manner'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+'''act in a performance'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+{{checktrans}}
+
+{{top}}
+*Arabic: [[يلعب]]
+*Chinese: [[玩]] (wán)
+*Dutch: [[spelen]]
+*[[Esperanto]]: [[ludi]]
+*Finnish: [[leikkiä]] (1), [[pelata]] (1), [[soittaa]] (2), [[näytellä]] (3)
+*German: [[spielen]] (1, 2, 4)
+*[[Guaraní]]: [[ñembosarái]]
+*[[Ido]]: [[ludar]] (1), [[plear]] (2, 4)
+*[[Interlingua]]: [[jocar]]
+{{mid}}
+*Irish: [[súgradh]] (''verbal noun'')
+*Japanese: [[遊ぶ]] (asobu)
+*Portuguese: [[jogar]]
+*Russian: [[играть]]
+*Slovak: [[hrať sa]]
+*Slovene: [[igrati se]]
+*Spanish: [[jugar]]
+*Swedish: [[leka]] (1), [[spela]] (1,2,4)
+*[[Tupinambá]]: [[nhemosaraîa]]
+{{bottom}}
+
+====Derived terms====
 *[[playact]]
 *[[play along]]
 *[[play ball]]
@@ -71,96 +88,98 @@
 '''to play''' ([[plays]], [[played]], [[playing]])
 
 #To participate in (a game).
-#To operate (a musical instrument).
-#To repeat recording with some device (play music, play DVD).
+#To produce music using (a musical instrument).
+#To use a device to hear (a recording).
+#:''play a DVD''
 
 ====Translations====
-'''participate in a game'''
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to I go here-->
-*{{fi}}: [[pelata]]
-*{{fr}}: [[jouer]] à
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from J to Z go here-->
+
+'''participate in (a game)'''
+{{top}}
+*Finnish: [[pelata]]
+*French: [[jouer]] à
+{{mid}}
+*Spanish: [[jugar]] a
 *Swedish: [[leka]], [[spela]]
-|}
-|}
+{{bottom}}
 
-'''operate instrument'''
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to I go here-->
-*{{fi}}: [[soittaa]]
-*{{fr}}: [[jouer]] de
-*{{it}}: [[suonare]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from J to Z go here-->
+'''produce music using (a musical instrument)'''
+{{top}}
+*Finnish: [[soittaa]]
+*French: [[jouer]] de
+{{mid}}
+*Italian: [[suonare]]
 *Swedish: [[spela]]
-|}
-|}
+{{bottom}}
 
-'''to repeat with device'''
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to I go here-->
-*{{fi}}: [[toistaa]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from J to Z go here-->
+'''use a device to hear (a recording)'''
+{{top}}
+*Finnish: [[toistaa]]
+*French: [[jouer]]
+{{mid}}
 *Swedish: [[spela]], [[spela upp]]
-|}
-|}
+{{bottom}}
 
-'''Translations to be checked'''
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+{{checktrans}}
+
 *Arabic: (1) [[يعزف]]  (2), [[يتمرن]]
 * Slovak: [[hrať]]
 *Slovene: [[igrati]] (1, 2)
-*Spanish: [[jugar]] a (1), [[jogar]] (2) ('''or "jugar de/a"?''') , [[tocar]] (2)
+*Spanish: [[jogar]] (2) ('''or "jugar de/a"?''') , [[tocar]] (2)
 *:They're playing cards - ''Juegan a las cartas''
 *:I play the piano - ''... (needs filling in - see above)'', ''Toco el piano''
 
-====Related terms====
+====Derived terms====
 *[[play along]]
 *[[play by ear]]
+*[[player]]
 
 ===Noun===
-'''play''' (plural: [[plays]])
+'''play''' (''plural'' '''[[plays]]''')
 
-#A theatrical performance consisting of [[actor]]s, etc.
+#A theatrical performance featuring [[actor]]s.
 #An individual's performance in a sport.
-#A a major move by a business.
+#A major move by a business.
 
 ====Translations====
+
+'''theatrical performance'''
+{{top}}
+*French: [[pièce]] ''f''
+*German: [[Schauspiel]] ''n'' (1)
+{{mid}}
+*Italian: [[dramma]] ''m''
+{{bottom}}
+
+'''individual's performance in a sport'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+'''major move by a business'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+{{checktrans}}
+
 *Dutch: [[schouwspel]] ''n'' (1), [[toneelstuk]] ''n'' (1), [[stuk]] ''n'' (1), [[spelbeweging]] ''f'' (2)
 *Finnish: [[kappale]] (1), [[näytelmä]] (1), [[peli]] (2)
-*French: [[pièce]] ''f'' (1)
-*German: [[Schauspiel]] ''n'' (1), [[Spielzug]] ''m'' (2)
-*Italian: [[dramma]] ''m'' (1)
-*[[Polish]]: [[sztuka]] ''f'' (1)
+*German: [[Spielzug]] ''m'' (2)
+*Polish: [[sztuka]] ''f'' (1)
 *Slovak [[hra]] (1, 2)
 *Slovene: [[igra]] ''f'' (1)
 *Swedish: [[pjäs]] ''c'' (1)
 
-====Related terms====
+====Derived terms====
 *[[playbill]]
 *[[player]]
 *[[playwright]]
-*[[radioplay]]
+*[[radio play]]
 
 [[Category:1000 English basic words]]
 
