--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -15,6 +15,7 @@
 
 '''act in a manner such that one has fun'''
 {{top}}
+*Catalan: [[jugar]]
 *French: [[jouer]]
 *Italian: [[giocare]]
 {{mid}}
@@ -23,6 +24,7 @@
 '''produce music using  a musical instrument'''
 <!--Note: this an INTRANSITIVE sense-->
 {{top}}
+*Catalan: [[tocar]]
 {{mid}}
 {{bottom}}
 
@@ -33,6 +35,7 @@
 
 '''act in a performance'''
 {{top}}
+*Catalan: [[actuar]]
 {{mid}}
 {{bottom}}
 
