--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -58,7 +58,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 *{{ja}}: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
 *{{la}}: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
 *[[Polish]]: [[piękny]]
-*{{pt}}: [[bonito]] ''m'', [[bonita]] ''f''
+*{{pt}}: [[belo]] ''m'', [[bela]] ''f'', [[bonito]] ''m'', [[bonita]] ''f''
 *[[Romanica]]: [[bello]] ''m'', [[bella]] ''f''
 *{{ru}}: [[красивый]],[[прекрасный]]
 *{{es}}: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
