--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -27,6 +27,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[ryömiä]], [[madella]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -57,6 +58,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[hiipiä]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
