--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -19,11 +19,13 @@
 
 '''body tissue'''
 {{top}}
+*Finnish: [[liha]]
 {{mid}}
 {{bottom}}
 
 '''animal tissue'''
 {{top}}
+*Finnish: [[liha]]
 {{mid}}
 {{bottom}}
 
@@ -39,6 +41,7 @@
 
 '''edible part of fruit/vegetable'''
 {{top}}
+*Finnish: [[malto]], [[hedelmäliha]]
 {{mid}}
 {{bottom}}
 
@@ -52,7 +55,6 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 *Dutch: [[vlees]] ''n'' (1,2), [[vel]] ''n'' (4), [[vruchtvlees]] ''n'' (5), [[vleeskleur]] ''f'' (6)
 *Danish: [[kød]] ''n'' (1,2,4); [[krop]] ''c'' (3); [[kødfarve]] ''c'' (5)
-*Finnish: [[liha]] (1, 2)
 *German: [[Fleisch]] ''n'' (1-5, 4 ''dated''); [[Fleischfarbe]] (6)
 *Persian: [[گوشت]] (gusht) (1), [[پوست]] (pust) (2,4,5)
 
