--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -141,6 +141,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[ehdottaa]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
