--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -193,6 +193,7 @@ The translations below need to be checked by native speakers and inserted into t
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[koho]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
