--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -17,6 +17,7 @@
 *'''Arabic''': [[طوبة]] (ṭūbah)
 *'''[[Breton]]''': [[brikenn]] ''f'' -où
 *'''Chinese''': [[磚]], [[砖]]
+*'''Finnish''': Tiili (1-2)
 *'''Indonesian''': [[bata]], [[batu bata]]
 *'''Japanese''': [[煉瓦]] ([[レンガ]], renga)
 *'''Portuguese''': [[tijolo]]
