/* Translations */ Albanian <tortoise#533672>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -10,6 +10,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Albanian: [[breshkë]] [[:sq:breshkë|º]] ''f''
 *[[Bosnian]]: [[kornjača]] ''f''
 *[[Breton]]: [[baot]] ''f'' -ed ''pl'', [[baot]] douar (to specify)
 *[[Catalan]]: [[tortuga]] ''f''
