Link to sv:sköldpadda <tortoise#533674>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -38,7 +38,7 @@
 *Russian: [[черепаха]]
 *Slovene: [[kopenska želva]] ''f''
 *Spanish: [[tortuga]] ''f''
-*Swedish: [[sköldpadda]]
+*Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
 |}
 |}
 
