--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -90,6 +90,7 @@
 *Esperanto: [[trovaĵo]], [[trovitaĵo]]
 *French: [[trouvaille]] ''f''
 {{mid}}
+*Russian: [[находка]] ''f''
 {{bottom}}
 
 [[Category:200 English basic words]]
