sorted nl <flesh#534105>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -19,12 +19,14 @@
 
 '''body tissue'''
 {{top}}
+*Dutch: [[vlees]] ''n''
 *Finnish: [[liha]]
 {{mid}}
 {{bottom}}
 
 '''animal tissue'''
 {{top}}
+*Dutch: [[vlees]] ''n''
 *Finnish: [[liha]]
 {{mid}}
 {{bottom}}
@@ -36,24 +38,27 @@
 
 '''skin'''
 {{top}}
+*Dutch: [[vel]] ''n''
 {{mid}}
 {{bottom}}
 
 '''edible part of fruit/vegetable'''
 {{top}}
+*Dutch: [[vruchtvlees]] ''n''
 *Finnish: [[malto]], [[hedelmäliha]]
 {{mid}}
 {{bottom}}
 
 '''colour'''
 {{top}}
+*Dutch: [[mensenkleur]] ''f''
 {{mid}}
 {{bottom}}
 
 =====Translations to be categorized=====
 {{checktrans}}
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
-*Dutch: [[vlees]] ''n'' (1,2), [[vel]] ''n'' (4), [[vruchtvlees]] ''n'' (5), [[vleeskleur]] ''f'' (6)
+
 *Danish: [[kød]] ''n'' (1,2,4); [[krop]] ''c'' (3); [[kødfarve]] ''c'' (5)
 *German: [[Fleisch]] ''n'' (1-5, 4 ''dated''); [[Fleischfarbe]] (6)
 *Persian: [[گوشت]] (gusht) (1), [[پوست]] (pust) (2,4,5)
