/* Translations (infinitive) (1 and 2?) */ <cut#535491>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -30,7 +30,16 @@
 
 ====Translations (infinitive) (1 and 2?)====
 *[[Dutch]]: [[snijden]]
-*[[Danish]]: [[skære]] (1), [[snitte]] (1, 5), [[klippe]] (1), [[hugge]] (1) [[save]] (1); [[skære]] af/ud (2), [[snitte]] af (2), [[klippe]] af/ud (2), [[hugge]] af (2) [[save]] af/ud (2); [[smide ud]]; afvise (3), [[spind]] (6), [[nedsætte]] (7), [[sænke]] (7), .... 
+*[[Danish]]:
+** 1, 2, 5, 6: [[skære]] (''knife, bat''), [[snitte]] (''knife, bat''), [[klippe]] (''scissors''), [[hugge]] (''axe, chisel''), [[save]] (''saw'').
+** 2: [[udvise]]/[[bortvise]] (from a team), [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]] '''[[af]]'''.
+** 3: [[afvise]].
+** 4: Hold op!, Hold så op, med det!. 
+** 7, 6: [[nedsætte]], [[sænke]] (''money'')
+** 9: [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]] '''[[ud]]'''.
+** 10: [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]]/[[file]] (''file''), [[Slibe]] (''by stone or sandpaper'') '''[[ud]]/[[til]]'''.
+** 11: [[skære]], [[krydse]] (''Geometry'')
+** 13: [[afbryde]].
 *[[Esperanto]]: [[tondi]]
 *Finnish: [[leikata]] (1), [[eristää]] (2), [[poistaa]] (2)
 *[[French]]: [[couper]]
