--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -1,6 +1,9 @@
 ==English==
+===Alternative spellings===
+eg., eg
+
 ===Etymology===
-Abbreviation of Latin ''[[exempli grati&#257;]]'' ("for example"). ''Grati&#257;'' here is in the dative case.
+Abbreviation of Latin ''[[exempli grati&#257;]]'' ("for example"). ''Grati&#257;'' here is in the dative case. Previously abbreviated to ''ex. gr.''
 
 ===Adverb===
 '''e.g.'''
@@ -10,7 +13,7 @@ Abbreviation of Latin ''[[exempli grati&#257;]]'' ("for example"). ''Grati&#257;
 ====Usage notes====
 *The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''  
 *Place ''e.g.'' between parentheses when used in written text and follow by a [[comma]] when used in its function as "for example".
-*Opinion is mixed about whether this term should be italicized or written with a separating non-breaking space as in ''e. g.''
+*Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
 
 ====Translations====
 *Dutch: [[bv.]], [[bijv.]], [[bvb.]] (''[[bijvoorbeeld]]'')
