--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -25,6 +25,7 @@ From Anglo-Saxon '''''[[thunor]]'''''
 *Chinese: [[雷]] (léi)
 *Dutch: [[donder]] ''m''
 *[[Esperanto]]: [[tondro]]
+*Finnish: [[ukkonen]]
 *French: [[tonnerre]] ''m''
 *German: [[Donner]]
 *[[Guaraní]]: [[sunu]]
@@ -48,6 +49,7 @@ From Anglo-Saxon '''''[[thunor]]'''''
 *[[Breton]]: [[ober]] [[kurun]] (1), [[taranal]] / [[taraniñ]] (1,2)
 *Dutch: [[donderen]] (1), [[overdonderen]] (2)
 *[[Esperanto]]: [[tondri]]
+*Finnish: [[ukkostaa]]
 *French: [[tonner]] (1), [[déblatérer]] (2), [[foudroyer]]
 *German: [[donnern]]
 *[[Guaraní]]: [[sunu]]
