--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -34,6 +34,7 @@
 *[[Hebrew]]: [[לימצו]] (limtzo)
 {{mid}}
 *Japanese: [[発見]]する (はっけんする, hakkensuru), [[見]]つける(みつける,mitsukeru)
+*[[Latvian]]: atrast
 *Russian: [[найти]]
 *Spanish: [[encontrar]]
 {{bottom}}
