--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -25,6 +25,7 @@
 *Irish: [[peann]] ''m''
 *Italian: [[penna]] ''f''
 *Japanese: [[ペン]] (pen)
+*Koryese: ir
 *Polish: [[pióro]]
 *Portuguese: [[caneta]] ''f''
 *Russian: [[ручка]] ''f''
