--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -5,19 +5,21 @@
 '''bridge''' (''plural'' '''bridges''')
 
 #A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
-#: ''The rope bridge crosses the river.''
+#: ''The rope '''bridge''' crosses the river.''
 #(''card games'') A [[card game]] played normally with four players playing as two teams of two players each.
-#: ''Bidding is an essential element of the game "Bridge".''
-#The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
-#: ''Rugby players often break the bridge of their noses.''
+#: ''Bidding is an essential element of the game "'''Bridge'''".''
+#(''anatomy'') The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
+#: ''Rugby players often break the '''bridge''' of their noses.''
 #(''dentistry'') A [[prosthesis]] replacing one or several adjacent [[tooth|teeth]].
-#: ''The dentist said she would pull out the decayed tooth and put in a bridge.''
-#{{nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from the [[quarterdeck]].
-#: ''The first officer is in the bridge.''
+#: ''The dentist pulled out the decayed tooth and put in a '''bridge'''.''
+#{{nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
+#: ''The first officer is on the '''bridge'''.''
 #(''computing'') A device which connects two or more [[computer]] [[bus|buses]], typically in a transparent manner.
-#: ''This chip is the bridge between the front-side bus and the I/O bus.''
+#: ''This chip is the '''bridge''' between the front-side bus and the I/O bus.''
 #(''communications'') A system which connects two or more [[LAN|local area networks]] at layer 2.
-#: ''The LAN bridge uses a spanning tree algorithm.''
+#: ''The LAN '''bridge''' uses a spanning tree algorithm.''
+#(''music'') A song contained within another song, often demarcated by meter, key, or melody.
+#: ''The lyrics in the song's '''bridge''' inverted its meaning.''
 
 ====Translations====
 
