--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -1,24 +1,18 @@
-=== Verb ===
-
-'''to cling''' ([[clung]], clung)
-
-# to hold very tightly, as to not fall off
-
+==English==
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'kliɳ/
 
+=== Verb ===
+{{irregverb|cling|[[clings]]|[[clung]]|[[clung]]|[[clinging]]}}
+# to [[hold]] very [[tight]]ly, as to not fall off
+
 === Translations ===
-*[[Dutch]]: [[klampen]]
-*[[Indonesian]]: 
-** [[sangkut|menyangkut]]
-** [[sangkut|menyangkutkan]]
-** [[gantung|bergantung]]
-** [[gantung|menggantung]]
-** [[gantung|menggantungkan]]
-*[[Japanese]]:
-** [[掛ける]] ([[かける]], kakeru)
-** [[ぶら下がる]] ([[ぶらさがる]], burasagaru)
-** [[ぶら下げる]] ([[ぶらさげる]], burasageru)
-*[[German]]: [[klammern]]
+{{top}}
+*Dutch: [[klampen]]
+*Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
+{{mid}}
+*Japanese:[[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
+{{bottom}}
+
 [[pl:cling]]
