irregverb template <come#541815>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -10,16 +10,14 @@
 [[Category:English homophones]]
 
 ===Verb===
-{{en-infl-irreg|come|comes|coming|came|come}}
+{{irregverb|come|[[comes]]|[[came]]|come|[[coming]]}}
 # To [[move]] from further [[away]] to [[near]]er to.
 
 ==== Antonyms ====
 *[[go]]
 
 ==== Translations ====
-
-'''inflected form'''
-*[[Bavarian]]: [[kemma]]
+*Bavarian: [[kemma]]
 *Chinese: (''simplified Chinese'') [[来]] (''[[pinyin]]:lái''); (''traditional Chinese'') [[來]] ( ''pinyin:lái'' ) 
 *Dutch: [[komen]]
 *Finnish: [[tulla]]
@@ -31,26 +29,12 @@
 *Irish: [[tar#Irish|tar]]
 *Italian: [[venire]]
 *Japanese: [[来る]] (くる, kuru)
-*[[Kurdish]]: [[hatin]]
-*[[Manchu]]: [[jimbi]]
+*Kurdish: [[hatin]]
+*Manchu: [[jimbi]]
 *Persian: [[آمَدَن]] (āmædæn)
 *Portuguese: [[vir]]
 *Rohingya: [[ai]]
 *Spanish: [[venir]]
-
-'''past participle'''
-*Dutch: [[gekomen]]
-*French: [[venu]]
-*German: [[gekommen]]
-*Indonesian: [[datang]], [[datang|didatangi]], [[datang|didatangkan]], [[datang|berdatangan]]
-*Irish: [[tagtha]]
-*Italian: [[venuto]]
-*Japanese: [[来た]] (きた, kita)
-*[[Kurdish]]: [[hatî]]
-*[[Manchu]]: [[jihe]]
-*Persian: [[آمَدِه]] (āmæde)
-*Rohingya: [[aáigiói]]
-*Spanish: [[venido]]
 
 ----
 
