--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -4,10 +4,7 @@
 *[[w:AHD|AHD]]: /kŭm/
 *[[w:IPA|IPA]]: /kʌm/
 *[[w:SAMPA|SAMPA]]: /kVm/
-
-====Homophones====
-*[[cum]]
-[[Category:English homophones]]
+*'''Homophones:''' [[cum]]
 
 ===Verb===
 {{irregverb|come|[[comes]]|[[came]]|come|[[coming]]}}
@@ -17,6 +14,7 @@
 *[[go]]
 
 ==== Translations ====
+{{top}}
 *Bavarian: [[kemma]]
 *Chinese: (''simplified Chinese'') [[来]] (''[[pinyin]]:lái''); (''traditional Chinese'') [[來]] ( ''pinyin:lái'' ) 
 *Dutch: [[komen]]
@@ -28,6 +26,7 @@
 *Indonesian: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
 *Irish: [[tar#Irish|tar]]
 *Italian: [[venire]]
+{{mid}}
 *Japanese: [[来る]] (くる, kuru)
 *Kurdish: [[hatin]]
 *Manchu: [[jimbi]]
@@ -35,6 +34,9 @@
 *Portuguese: [[vir]]
 *Rohingya: [[ai]]
 *Spanish: [[venir]]
+{{bottom}}
+
+[[Category:English homophones]]
 
 ----
 
