irregverb template; fmt <creep#541832>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -2,15 +2,48 @@
 === Pronunciation ===
 */krēp/, /kriːp/, /kri:p/
 
-===Transitive verb===
-'''to creep''' ('''creeps''', '''creeping''', '''[[crept]]''')
+=== Noun ===
+'''creep''' (plural: '''[[creeps]]''')
 
-#To move slowly with the [[abdomen]] close to the ground.
+#The movement of something that creeps.
+#A gradual change in anything.
+#(''informal'') A annoyingly [[unpleasant]] person.
+#:''Stop following me, you creep!''
+
+====Translations====
+
+'''<pre>movement of something that creeps</pre>'''
+{{top}}
+<!--Put translations for languages from A to I here-->
+*Dutch: [[kruip]] ''m''
+{{mid}}
+<!--Put translations for languages from J to Z here-->
+{{bottom}}
+
+'''<pre>gradual change in anything</pre>'''
+{{top}}
+<!--Put translations for languages from A to I here-->
+{{mid}}
+<!--Put translations for languages from J to Z here-->
+{{bottom}}
+
+'''<pre>informal: an annoyingly unpleasant person</pre>'''
+{{top}}
+<!--Put translations for languages from A to I here-->
+*Dutch: [[griezel]] ''m'', [[engerd]] ''m''
+*German: [[schräger Vogel]] ''m''
+{{mid}}
+<!--Put translations for languages from J to Z here-->
+{{bottom}}
+
+===Verb===
+{{irregverb|creep|[[creeps]]|[[crept]]|[[crept]]|[[creeping]]}}
+#''(transitive)'' To move slowly with the [[abdomen]] close to the ground.
 #:''Lizards and snakes crept over the ground.''
-#Of [[plant]]s, to grow across a surface rather than upwards.
-#To move slowly and quietly in a particular direction.
+#''(transitive)'' Of [[plant]]s, to grow across a surface rather than upwards.
+#''(transitive)'' To move slowly and quietly in a particular direction.
 #:''He tried to creep past the guard without being seen.''
-#To change gradually in a particular direction.
+#''(transitive)'' To change gradually in a particular direction.
 #:''Prices have been creeping up all year.''
 
 ====Synonyms====
@@ -20,8 +53,7 @@
 *(''change gradually in a particular direction''): [[inch]]
 
 ==== Translations ====
-
-'''move slowly with the abdomen close to the ground'''
+'''<pre>move slowly with the abdomen close to the ground</pre>'''
 {{top}}
 <!--Put translations for languages from A to I here-->
 *Dutch: [[kruipen]]
@@ -32,7 +64,7 @@
 *Russian: [[ползти]]
 {{bottom}}
 
-'''grow across a surface rather than upwards'''
+'''<pre>grow across a surface rather than upwards</pre>'''
 {{top}}
 <!--Put translations for languages from A to I here-->
 *Dutch: [[kruipen]]
@@ -41,7 +73,7 @@
 *Russian: [[стелиться]]
 {{bottom}}
 
-'''move slowly and quietly in a particular direction'''
+'''<pre>move slowly and quietly in a particular direction</pre>'''
 {{top}}
 <!--Put translations for languages from A to I here-->
 *Dutch: [[kruipen]]
@@ -51,7 +83,7 @@
 *Russian: [[стелиться]]
 {{bottom}}
 
-'''change gradually in a particular direction'''
+'''<pre>change gradually in a particular direction</pre>'''
 {{top}}
 <!--Put translations for languages from A to I here-->
 *Dutch: [[opschuiven]]
@@ -63,44 +95,10 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-*[[Catalan]]: [[arrossegar-se]]
-*[[Frisian]]: [[krûpe]]
+*Catalan: [[arrossegar-se]]
+*Frisian: [[krûpe]]
 *German: [[kriechen]]
 *Spanish: [[arrastrarse]]
-
-=== Noun ===
-'''creep''' (''plural'' '''creeps''')
-
-#The movement of something that creeps.
-#A gradual change in anything.
-#(''informal'') A annoyingly [[unpleasant]] person.
-#:''Stop following me, you creep!''
-
-==== Translations ====
-
-'''movement of something that creeps'''
-{{top}}
-<!--Put translations for languages from A to I here-->
-*Dutch: [[kruip]] ''m''
-{{mid}}
-<!--Put translations for languages from J to Z here-->
-{{bottom}}
-
-'''gradual change in anything'''
-{{top}}
-<!--Put translations for languages from A to I here-->
-{{mid}}
-<!--Put translations for languages from J to Z here-->
-{{bottom}}
-
-'''informal: an annoyingly unpleasant person'''
-{{top}}
-<!--Put translations for languages from A to I here-->
-*Dutch: [[griezel]] ''m'', [[engerd]] ''m''
-*German: [[schräger Vogel]] ''m''
-{{mid}}
-<!--Put translations for languages from J to Z here-->
-{{bottom}}
 
 ===Derived terms===
 *[[creep up on]]
