--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -3,7 +3,7 @@
 */krēp/, /kriːp/, /kri:p/
 
 === Noun ===
-{{sb|creep|creeps}}
+{{sb|creep|[[creeps]]}}
 #The movement of something that creeps.
 #A gradual change in anything.
 #(''informal'') A annoyingly [[unpleasant]] person.
