--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -11,7 +11,7 @@
 *German: [[Mantel]] ''m'' (1), [[Beschichtung]] ''f'' (2)
 *Indonesian: [[mantel]]
 *Irish: [[cóta]] ''m''
-*Italian: (1) [[mantello]] ''m'', (2) [[rivestimento]] ''m''
+*Italian: [[mantello]] ''m'' (1), [[rivestimento]] ''m'' (2)
 *Japanese: [[コート]] (kōto)
 *Romanian: [[haină]] ''f'', [[manta]] ''f''
 *Slovene: [[plašč]] ''m'' (1)
