--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -48,6 +48,7 @@
 *German: [[kämpfen]]
 *Hebrew: [[קרב]]
 *Indonesian: [[tarung]], [[tengkar]], [[serang]]
+*Italian: [[lotta]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
