--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -21,22 +21,16 @@
 ====Translations====
 
 '''be supported by a liquid'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 <!--Put translations for languages from A to I here-->
 *Dutch: [[drijven]]
 *Finnish: [[kellua]]
 *French: [[flotter]]
 *Italian: [[galleggiare]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 <!--Put translations for languages from J to Z here-->
-|}
-|}
+*Russian: [[плавать]], [[всплыть]] (to reach the surface)
+{{bottom}}
 
 '''be capable of floating'''
 {| border=0  width=100%
@@ -55,35 +49,23 @@
 |}
 
 '''drift gently through the air'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 <!--Put translations for languages from A to I here-->
 *Finnish: [[leijua]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 <!--Put translations for languages from J to Z here-->
-|}
-|}
+*Russian: [[парить]], [[плыть]]
+{{bottom}}
 
 '''move in a particular direction with the liquid in which one is floating'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 <!--Put translations for languages from A to I here-->
 *Dutch: [[meedrijven]]
 *Finnish: [[lipua]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 <!--Put translations for languages from J to Z here-->
-|}
-|}
+*Russian: [[плыть]]
+{{bottom}}
 
 '''move in a fluid manner'''
 {| border=0  width=100%
