robot  Adding: fi, io <New Zealand#551187>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -53,4 +53,6 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[w:New Zealand|Wikipedia article about New Zealand]]
 [[Category:English country nouns]]
 
+[[io:New Zealand]]
 [[hu:New Zealand]]
+[[fi:New Zealand]]
