/* Translations */ <Czech Republic#553486>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -25,6 +25,7 @@
 *Slovak: [[Česká republika]]  ''f'' ([[Česko]] ''n'')
 *Slovene: Češka republika ([[Češka]] ''f'')
 *Turkish: [[Çek Cumhuriyeti]]
+*Yiddish: Tshekhishe Republik (Tshekhay)
 
 ====See also====
 *[[Countries of the world]]
