--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -19,7 +19,7 @@
 *Japanese: [[チェコ共和国]] (チェコきょうわこく, cheko-kyowakoku)
 *Korean: [[체코]], [[체코 공화국]] (che co, che co gong hwa gook)
 *Latvian: [[Čehijas Republika]] ''f'' ([[Čehija]] ''f'')
-*Luxembourgish: Tschechesche Republik (Tschechei)
+*Luxembourgish: Tschechesch Republik (Tschechei)
 *Polish: Republika Czeska ''f'' ([[Czechy]] ''pl'')
 *Portuguese: [[República Tcheca]]
 *Romanian: [[Republica Cehă]] ''f'' ([[Cehia]])
