robot  Adding: ja <beautiful#554222>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -73,6 +73,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 [[gl:Beautiful]]
 [[io:Beautiful]]
 [[it:beautiful]]
+[[ja:beautiful]]
 [[pt:Beautiful]]
 [[ru:Beautiful]]
 [[fi:Beautiful]]
