--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -1,5 +1,7 @@
 ==English==
 
+===Etymology===
+From Arabic ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' instead of ''zemt''.
 ===Noun===
 '''zenith'''
 # the point vertically above a given position or observer
