/* Translations to be checked */ cs <play#558368>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -46,6 +46,7 @@
 {{top}}
 *Arabic: [[يلعب]]
 *Chinese: [[玩]] (wán)
+*Czech: [[rhát]]
 *Dutch: [[spelen]]
 *[[Esperanto]]: [[ludi]]
 *Finnish: [[leikkiä]] (1), [[pelata]] (1), [[soittaa]] (2), [[näytellä]] (3)
