--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -10,8 +10,9 @@
 # Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
 
 ====Translations====
+{{top}}
 *Arabic: [[المانيا]] (almāniyā)
-*[[Bosnian]]: Njemačka ''f''
+*Bosnian: [[Njemačka]] {{f}}
 *Breton: [[Alamagn]]
 *Catalan: [[Alemanya]]
 *Cornish: [[Almayn]]
@@ -36,9 +37,10 @@
 *Interlingua: [[Germania]]
 *Irish: [[an Ghearmáin]] ''f''
 *Italian: [[Germania]] ''f''
+{{mid}}
 *Japanese: [[ドイツ]], [[独逸]] (Doitsu)
 *Khmer: [[ឤលឺម៉ង់]] (āllīmang)
-*Korean: [[독일]] (dogil), [[독일국]] (dok-il-guk)
+*Korean: [[독일]] (dog-il), [[독일국]] (dog-il-guk)
 *Latin: [[Germania]] ''f''
 *Latvian: [[Vācija]] ''f''
 *Luxembourgish: [[Däitschland]] ''n''
@@ -48,6 +50,9 @@
 *Portuguese: [[Alemanha]] ''f''
 *Romanian: [[Germania]] ''f''
 *Russian: [[Германия]] (Germaniya) ''f'' 
+*Serbian:
+*:Cyrillic: [[Немачка]] {{f}}
+*:Latin: [[Nemačka]] {{f}}
 *Slovak: [[Nemecko]] ''n''
 *Slovene: [[Nemčija]] ''f''
 *Spanish: [[Alemania]] ''f''
@@ -58,6 +63,7 @@
 *Vietnamese: [[nước Đức]]
 *Welsh: [[yr Almaen]] ''f''
 *Xhosa: [[iJamani]] ''5''
+{{bottom}}
 
 ===See also===
 *[[German Empire]]
