added two meanings and examples <pen#563060>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -7,6 +7,9 @@
 '''pen''' (plural: [[pens]])
 
 #A utensil, usually [[tubular]] in form, containing ink used to [[write]] or make marks.
+#: ''He took notes with a '''pen'''.''
+# A mark made with [[ink]]
+#: ''I need some stain remover, this mark is in '''pen'''.''
 
 ====Related terms====
 *[[penmanship]]
@@ -46,6 +49,10 @@
 '''pen'''
 
 #An [[enclose]]d area used to contain [[domesticated]] animals, especially [[sheep]] or [[cattle]].
+#: ''There are two steers in the third '''pen'''.''
+#{{baseball}} The [[bullpen]]
+#: ''Two righties are up in the '''pen'''.''
+
 
 ====Translations====
 *French: [[enclos]] ''m''
